--- a/Morpion JS/index.html
+++ b/Morpion JS/index.html
@@ -12,6 +12,7 @@
             <span>Au tour de </span>
             <span id="pseudoTour"></span>
             <span> de joué.</span>
+            <figure class="figureTurnSymbole"></figure>
         </div>
         <div class="board">
             <div class="box" id="box1"></div>
