--- a/Morpion JS/index.html
+++ b/Morpion JS/index.html
@@ -8,11 +8,21 @@
 </head>
 <body>
     <div class="container">
-        <div>
-            <span>Au tour de </span>
+        <div id="divTurn">
+            <span id="spanDivTurn1">Au tour de </span>
             <span id="pseudoTour"></span>
-            <span> de joué.</span>
+            <span id="spanDivTurn2"> de jouer</span>
             <figure class="figureTurnSymbole"></figure>
+        </div>
+        <div class="score">
+            <div class="scoreDivJ1">
+                <span id="spanScoreJ1"></span>
+                <span id="scoreJ1"></span>
+            </div>
+            <div class="scoreDivJ1">
+                <span id="spanScoreJ2"></span>
+                <span id="scoreJ2"></span>
+            </div>
         </div>
         <div class="board">
             <div class="box" id="box1"></div>
